--- a/statics/templates/index.html
+++ b/statics/templates/index.html
@@ -40,7 +40,9 @@
 
     <main class="px-3">
       <h1>berrypost</h1>
-      <p class="lead">Berrypost is a simple gRPC service debugging tool, built for human beings.</p>
+      <div class="lead-container mx-auto">
+        <p class="lead">Berrypost is a simple gRPC service debugging tool, built for human beings.</p>
+      </div>
       <p class="lead">
         <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
       </p>
