--- a/statics/templates/index.html
+++ b/statics/templates/index.html
@@ -27,10 +27,11 @@
   </style>
 </head>
 
-<body class="d-flex h-100 text-center text-white bg-dark">
+<body class="d-flex h-100 text-center text-dark bg-white">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
+        <div class="float-md-start main-icon"></div>
         <h3 class="float-md-start mb-0">berrypost</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -44,12 +45,12 @@
         <p class="lead">Berrypost is a simple gRPC service debugging tool, built for human beings.</p>
       </div>
       <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+        <a href="#" class="btn btn-lg btn-secondary fw-bold border-dark bg-white">Learn more</a>
       </p>
     </main>
 
-    <footer class="mt-auto text-white-50">
-      <p>Fork berrypost on <a href="https://github.com/realityone/berrypost" class="text-white">GitHub</a>.</p>
+    <footer class="mt-auto text-dark-50">
+      <p>Fork berrypost on <a href="https://github.com/realityone/berrypost" class="text-dark">GitHub</a>.</p>
     </footer>
   </div>
 </body>
