--- a/statics/templates/page-dev/navbar-top.css
+++ b/statics/templates/page-dev/navbar-top.css
@@ -40,6 +40,39 @@ html, body {
     font-size: 10px;
 }
 
-.code-preview > .card > .card-body > .form-group {
-    max-height: 150px;
+.code-preview, .code-preview>* {
+    height: 100%;
+    overflow: hidden;
+}
+
+.preview-area {
+    flex: 1 1 auto;
+    margin-top: 0;
+    height: 100%;
+    position: relative;
+}
+
+.preview-area>.CodeMirror {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+}
+
+.response-area {
+    flex: 1 1 auto;
+    margin-top: 0;
+    height: 100%;
+    position: relative;
+}
+
+.response-area>.CodeMirror {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
 }
