--- a/statics/src/invoke/invoke.css
+++ b/statics/src/invoke/invoke.css
@@ -45,29 +45,7 @@ html, body {
     overflow: hidden;
 }
 
-.preview-area {
-    flex: 1 1 auto;
-    margin-top: 0;
-    height: 100%;
-    position: relative;
-}
-
-.preview-area>.CodeMirror {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-}
-
-.response-area {
-    flex: 1 1 auto;
-    margin-top: 0;
-    height: 100%;
-    position: relative;
-}
-
+.preview-area>.CodeMirror,
 .response-area>.CodeMirror {
     position: absolute;
     top: 0;
@@ -75,4 +53,12 @@ html, body {
     left: 0;
     right: 0;
     height: 100%;
+}
+
+.response-area,
+.preview-area {
+    flex: 1 1 auto;
+    margin-top: 0;
+    height: 100%;
+    position: relative;
 }
