--- a/statics/templates/invoke.html
+++ b/statics/templates/invoke.html
@@ -12,242 +12,23 @@
 </head>
 
 <body class="h-100">
-    <div class="container-fluid status-bar bg-light">
-        <div class="row border-top border-bottom">
-            <div class="col-4">
-            </div>
-
-            <div class="col-4 text-center border-start border-end">
-                <div class="w-100">
-                    Sent Invoke
-                    <span class="badge border border-success text-success float-end mt-1">200 OK</span>
-                </div>
-                <span></span>
-                <div style="font-size: 50%;" class="text-secondary">
-                    POST /invoke/hello.world.Service/Echo
-                </div>
-                <div style="height: 3px;" class="progress">
-                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="75"
-                        aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                </div>
-            </div>
-
-            <div class="col-4"></div>
-        </div>
-    </div>
+    {{template "status-bar" .}}
 
     <div class="container-fluid main-panel">
         <div class="row">
             <div class="col-3 bg-white method-list">
-                <div class="list-group list-group-flush border-bottom scrollarea">
-
-                    <a href="#" class="list-group-item list-group-item-action py-3" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Service.Echo <span class="dot bg-success"></span>
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Service.Echo <span class="dot bg-danger"></span>
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Service.Echo
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Service.Echo
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-
-                    <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                        <div class="d-flex w-100 align-items-center justify-content-between">
-                            Search.Card
-                        </div>
-                        <div class="col-10 mb-1 small">/hello.world.Service/Echo
-                        </div>
-                    </a>
-                </div>
+                {{template "method-list" .}}
             </div>
 
             <div class="col-5 d-flex flex-column border-start border-end request-panel">
-                <div class="border-bottom">
-                    <div class="input-group mb-3 mt-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text text-primary" id="basic-addon1">Method</span>
-                        </div>
-                        <input type="text" class="form-control" value="/hello.world.Service/Echo"
-                            aria-describedby="basic-addon1" disabled>
-                        <button class="btn btn-outline-success" type="button">Send</button>
-                    </div>
-                    <div class="input-group mb-3 mt-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text text-primary" id="basic-addon1">Target</span>
-                        </div>
-                        <input type="text" class="form-control" value="tcp://127.0.0.1:9000"
-                            aria-describedby="basic-addon1">
-                    </div>
-                </div>
-
-                <div class="request-editor pt-2 border-bottom pb-2">
-                    <div class="card">
-                        <div class="card-header">
-                            <ul class="nav nav-tabs card-header-tabs">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Metadata</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="true" href="#">Body</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="card-body">
-                            <div class="form-group">
-                                <textarea class="form-control" id="requestBody">
-{
-    "data": [
-        {
-            "user_id": 1234,
-            "group_id": 456,
-            "type": 1
-        }
-    ]
-}</textarea>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="code-preview pt-2 pb-2">
-                    <div class="card">
-                        <div class="card-header">
-                            <ul class="nav nav-tabs card-header-tabs">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="true" href="#">Preview</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="card-body">
-                            <div class="preview-area">
-                                <textarea class="form-control" id="preview" rows="10">## invoke
-curl -X "POST" "http://127.0.0.1:8000/invoke/hello.world.Service/Echo" \
- -H 'Content-Type: text/plain; charset=utf-8' \
- -d $'{
-    "data": [
-        {
-          "user_id": 1234,
-          "group_id": 456,
-          "type": 1
-        }
-    ]
-}'
-</textarea>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+                {{template "request-panel" .}}
             </div>
 
             <div class="col-4 response-panel pt-2 pb-2">
-                <div class="card">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="true" href="#">Response</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group h-100">
-                            <div class="response-area">
-                                <textarea class="form-control" id="responseBody" rows="10">{
-  "data": [
-    {
-      "user_id": 1234,
-      "group_id": 456,
-      "type": 1
-    }
-  ]
-}</textarea>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {{template "response-panel" .}}
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
