refine status bar

--- a/statics/templates/invoke.html
+++ b/statics/templates/invoke.html
@@ -12,7 +12,9 @@
 </head>
 
 <body class="h-100">
-    {{template "status-bar" .}}
+    <div class="container-fluid status-bar bg-light">
+        {{template "status-bar" .}}
+    </div>
 
     <div class="container-fluid main-panel">
         <div class="row">
