seperate server and component

--- a/statics/templates/invoke.html
+++ b/statics/templates/invoke.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>{{ .Name }}</title>
+    <title>{{ .Meta.Name }}</title>
 
     <script src="/assets/statics/dist/vendor.bundle.js"></script>
     <script src="/assets/statics/dist/invoke.bundle.js"></script>
