--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -12,7 +12,8 @@
         <div class="input-group-prepend">
             <span class="input-group-text text-primary" id="basic-addon1">Target</span>
         </div>
-        <input type="text" class="form-control" value="tcp://127.0.0.1:9000" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="tcp://127.0.0.1:9000" value=""
+            aria-describedby="basic-addon1">
     </div>
 </div>
 
