--- a/statics/templates/$response_panel.html
+++ b/statics/templates/$response_panel.html
@@ -10,15 +10,7 @@
     <div class="card-body">
         <div class="form-group h-100">
             <div class="response-area">
-                <textarea class="form-control" id="responseBody" rows="10">{
-"data": [
-{
-"user_id": 1234,
-"group_id": 456,
-"type": 1
-}
-]
-}</textarea>
+                <textarea class="form-control" id="responseBody"></textarea>
             </div>
         </div>
     </div>
