--- a/statics/templates/$method_list.html
+++ b/statics/templates/$method_list.html
@@ -4,7 +4,8 @@
 
     {{range $_, $s := .Services}}
     {{range $_, $m := $s.Methods}}
-    <a href="#" class="list-group-item list-group-item-action py-3" aria-current="true">
+    <a data-input-schema='{{ $m.InputSchema }}' href="#" class="list-group-item list-group-item-action py-3"
+        aria-current="true">
         <div class="d-flex w-100 align-items-center justify-content-between">
             {{ $s.Name }}.{{ $m.Name }}
             <!-- <span class="dot bg-success"></span> -->
