--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -12,8 +12,8 @@
         <div class="input-group-prepend">
             <span class="input-group-text text-primary" id="basic-addon1">Method</span>
         </div>
-        <input type="text" class="form-control" placeholder="Method Name" value="" aria-describedby="basic-addon1"
-            disabled>
+        <input id="method-name" type="text" class="form-control" placeholder="Method Name" value=""
+            aria-describedby="basic-addon1" disabled>
         <button class="btn btn-outline-success" type="button">Send</button>
     </div>
 </div>
