--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -49,7 +49,7 @@
         </div>
         <div class="card-body">
             <div class="preview-area">
-                <textarea class="form-control" id="preview"></textarea>
+                <textarea class="form-control" id="preview">#TBD</textarea>
             </div>
         </div>
     </div>
