--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -14,7 +14,7 @@
         </div>
         <input id="method-name" type="text" class="form-control" placeholder="Method Name" value=""
             aria-describedby="basic-addon1" disabled>
-        <button class="btn btn-outline-success" type="button">Send</button>
+        <button id="send-button" class="btn btn-outline-success" type="button">Send</button>
     </div>
 </div>
 
