--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -12,7 +12,7 @@
         <div class="input-group-prepend">
             <span class="input-group-text text-primary" id="basic-addon1">Method</span>
         </div>
-        <input id="method-name" type="text" class="form-control" placeholder="Method Name" value=""
+        <input id="method-name" type="text" class="form-control" placeholder="/<package>.<service>/<method>" value=""
             aria-describedby="basic-addon1" disabled>
         <button id="send-button" class="btn btn-outline-success" type="button">Send</button>
     </div>
@@ -22,9 +22,9 @@
     <div class="card">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Metadata</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="true" href="#">Body</a>
                 </li>
