--- a/statics/templates/index.html
+++ b/statics/templates/index.html
@@ -18,7 +18,7 @@
         <div class="float-md-start main-icon"></div>
         <h3 class="float-md-start mb-0">{{ .Name }}</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </nav>
       </div>
     </header>
@@ -29,7 +29,7 @@
         <p class="lead">{{ .Description }}</p>
       </div>
       <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary fw-bold border-dark bg-white">Learn more</a>
+        <a href="/management/invoke" class="btn btn-lg btn-secondary fw-bold border-dark bg-white">Learn more</a>
       </p>
     </main>
 
