seperate first alias service route

--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -7,7 +7,7 @@
     <div class="col-4 text-center border-start border-end">
         <div class="w-100">
             Ready
-            <!-- <span class="badge border border-success text-success float-end mt-1">200 OK</span> -->
+            <span style="display: none;" class="badge border border-success text-success float-end mt-1">200 OK</span>
         </div>
         <span></span>
         <!-- <div style="font-size: 50%;" class="text-secondary">
