--- a/statics/templates/index.html
+++ b/statics/templates/index.html
@@ -29,7 +29,8 @@
         <p class="lead">{{ .Description }}</p>
       </div>
       <p class="lead">
-        <a href="/management/invoke" class="btn btn-lg btn-secondary fw-bold border-dark bg-white">Learn more</a>
+        <a href="/management/rediect-to-example" class="btn btn-lg btn-secondary fw-bold border-dark bg-white">Learn
+          more</a>
       </p>
     </main>
 
