github link option

--- a/statics/templates/index.html
+++ b/statics/templates/index.html
@@ -34,9 +34,11 @@
       </p>
     </main>
 
+    {{if .GitHubLink}}
     <footer class="mt-auto text-dark-50">
       <p>Fork berrypost on <a href="https://github.com/realityone/berrypost" class="text-dark">GitHub</a>.</p>
     </footer>
+    {{end}}
   </div>
 </body>
 
