--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -11,7 +11,7 @@
                 {{ .PackageName }}
                 {{end}}
             </button>
-            <ul class="dropdown-menu" aria-labelledby="serviceMenu">
+            <ul class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="serviceMenu">
                 <input type="text" class="form-control" placeholder="Search..." id="serviceMenuSearch">
                 {{range $_, $a := .ServiceDropdown}}
                 <li><a class="dropdown-item" href="/management/invoke/{{$a}}">{{ $a }}</a></li>
