--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -42,8 +42,13 @@
     <div class="card">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
+                <li class="nav-item me-auto">
                     <a class="nav-link active" aria-current="true" href="#">Preview</a>
+                </li>
+                <li class="nav-item">
+                    <select class="form-select form-select-sm">
+                        <option selected>curl</option>
+                    </select>
                 </li>
             </ul>
         </div>
