--- a/statics/templates/index.html
+++ b/statics/templates/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="{{ .Description }}">
   <script src="/assets/statics/dist/vendor.bundle.js"></script>
   <script src="/assets/statics/dist/index.bundle.js"></script>
-
+  <link rel="icon" href="/favicon.ico">
   <title>{{ .Name }}</title>
 </head>
 
