--- a/statics/templates/invoke.html
+++ b/statics/templates/invoke.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="{{ .Meta.Description }}">
+    <link rel="icon" href="/favicon.ico">
     <title>{{ .Meta.Name }}</title>
 
     <script src="/assets/statics/dist/vendor.bundle.js"></script>
