--- a/statics/src/invoke/invoke.css
+++ b/statics/src/invoke/invoke.css
@@ -68,3 +68,15 @@ html, body {
     max-height: 40vh;
     overflow-x: hidden;
 }
+
+.request-status>.text-secondary {
+    font-size: 50%;
+}
+
+.request-status>.progress {
+    height: 3px;
+}
+
+.request-status>.progress>.progress-bar {
+    width: 75%;
+}
