--- a/statics/templates/$method_list.html
+++ b/statics/templates/$method_list.html
@@ -4,10 +4,11 @@
 
     {{range $_, $s := .Services}}
     {{range $_, $m := $s.Methods}}
-    <a data-method-name='{{ $m.GRPCMethodName }}' data-input-schema='{{ $m.InputSchema }}' href="#"
+    <a data-grpc-method-name='{{ $m.GRPCMethodName }}' data-input-schema='{{ $m.InputSchema }}'
+        data-service-method='{{ $m.ServiceMethod }}' href="#"
         class="service-method list-group-item list-group-item-action py-3" aria-current="true">
         <div class="d-flex w-100 align-items-center justify-content-between">
-            {{ $s.Name }}.{{ $m.Name }}
+            {{ $m.ServiceMethod }}
             <!-- <span class="dot bg-success"></span> -->
         </div>
         <div class="col-10 mb-1 small text-black-50">{{ $m.GRPCMethodName }}</div>
