--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -21,19 +21,20 @@
         </div>
     </div>
 
-    <div class="col-4 text-center border-start border-end">
-        <div class="w-100">
-            Ready
-            <!-- <span class="badge border border-success text-success float-end mt-1">200 OK</span> -->
+    <div class="col-4 text-center border-start border-end request-status">
+        <div id="request-action" class="w-100">
+            <div id="request-action-text">Ready
+                <span id="request-action-badge" class="badge border border-success text-success float-end mt-1">200
+                    OK</span>
+            </div>
         </div>
-        <span></span>
-        <!-- <div style="font-size: 50%;" class="text-secondary">
+        <div class="text-secondary">
             POST /invoke/hello.world.Service/Echo
         </div>
-        <div style="height: 3px;" class="progress">
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="75"
-                aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-        </div> -->
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                aria-valuemax="100"></div>
+        </div>
     </div>
 
     <div class="col-4"></div>
