--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -23,14 +23,9 @@
 
     <div class="col-4 text-center border-start border-end request-status">
         <div id="request-action" class="w-100">
-            <div id="request-action-text">Ready
-                <span id="request-action-badge" class="badge border border-success text-success float-end mt-1">200
-                    OK</span>
-            </div>
+            <div id="request-action-text">Ready</div>
         </div>
-        <div class="text-secondary">
-            POST /invoke/hello.world.Service/Echo
-        </div>
+        <div id="request-action-description" class="text-secondary"></div>
         <div class="progress">
             <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                 aria-valuemax="100"></div>
