--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -26,7 +26,7 @@
             <div id="request-action-text">Ready</div>
         </div>
         <div id="request-action-description" class="text-secondary"></div>
-        <div class="progress">
+        <div style="display: none;" class="progress">
             <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                 aria-valuemax="100"></div>
         </div>
