using flex to build request status

--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="col-4 text-center border-start border-end request-status">
+    <div class="col-4 text-center border-start border-end request-status d-flex flex-column">
         <div id="request-action" class="w-100">
             <div id="request-action-text">Ready</div>
         </div>
