--- a/statics/templates/$status_bar.html
+++ b/statics/templates/$status_bar.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="col-4 text-center border-start border-end request-status d-flex flex-column">
-        <div id="request-action" class="w-100">
+        <div id="request-action">
             <div id="request-action-text">Ready</div>
         </div>
         <div id="request-action-description" class="text-secondary"></div>
